--- a/modulo1.html
+++ b/modulo1.html
@@ -67,7 +67,7 @@
                 <h2>📊 Actividad 1: Infografía - Conceptos Gerenciales en TI</h2>
                 <div class="section-content">
                     <p>Haz clic en la siguiente actividad para ver la infografía completa sobre los cinco conceptos gerenciales aplicados a proyectos de TI.</p>
-                    <a href="Actividad1.html">
+                    <a href="actividad1.html">
                         <button class="activity-button">Ver Actividad 1</button>
                     </a>
                 </div>
@@ -107,4 +107,5 @@
     </div>
 </body>
 </html>
+
 
