--- a/modulo1.html
+++ b/modulo1.html
@@ -68,7 +68,7 @@
                 <div class="section-content">
                     <p>Haz clic en la siguiente actividad para ver la infografía completa sobre los cinco conceptos gerenciales aplicados a proyectos de TI.</p>
                     <a href="actividad1.html">
-                        <button class="activity-button">Ver Actividad 1</button>
+                        <button class="activity-button">Ver actividad 1</button>
                     </a>
                 </div>
             </div>
@@ -107,4 +107,5 @@
     </div>
 </body>
 </html>
+
 
