--- a/actividad1.html
+++ b/actividad1.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Actividad 1 - Infografía</title>
+<title>actividad 1 - Infografía</title>
 <style>
     * {margin:0; padding:0; box-sizing:border-box;}
     body {font-family:'Arial', sans-serif; background: linear-gradient(120deg, #2c3e50 0%, #34495e 50%, #2c3e50 100%); padding:20px;}
@@ -69,4 +69,5 @@
 </div>
 </body>
 </html>
+
 
